--- a/package.json
+++ b/package.json
@@ -11,9 +11,10 @@
   "dependencies": {
     "flowbite": "^1.8.1",
     "flowbite-react": "^0.6.4",
-    "next": "13.5.4",
+    "next": "^13.5.4",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "sass": "^1.69.3"
   },
   "devDependencies": {
     "@types/node": "^20",
