--- a/src/app/mappings/CryptoMappings.json
+++ b/src/app/mappings/CryptoMappings.json
@@ -2,31 +2,26 @@
   {
     "cmc_id": 1,
     "field_key": "BTC",
-    "name": "BTC",
-    "unit": "GBP"
+    "name": "BTC"
   },
   {
     "cmc_id": 1027,
     "field_key": "ETH",
-    "name": "ETH",
-    "unit": "GBP"
+    "name": "ETH"
   },
   {
     "cmc_id": 2010,
     "field_key": "ADA",
-    "name": "ADA",
-    "unit": "GBP"
+    "name": "ADA"
   },
   {
     "cmc_id": 74,
     "field_key": "DOGE",
-    "name": "DOGE",
-    "unit": "GBP"
+    "name": "DOGE"
   },
   {
     "cmc_id": 512,
     "field_key": "XLM",
-    "name": "XLM",
-    "unit": "GBP"
+    "name": "XLM"
   }
 ]
